# flutter_sequencer_plus

./: .gitignore  .gitmodules  ANDROID_FIXES.md  API_REFERENCE.md  AUDIOUNIT_STATUS.md  AUDIOUNIT_SUCCESS.md  CHANGELOG.md  CLAUDE.md  DEBUGGING_REPORT.md  DEPLOYMENT_GUIDE.md  FINAL_AUDIOUNIT_STATUS.md  LICENSE  LOOP_PERFORMANCE_OPTIMIZATIONS.md  MIGRATION_CHECKLIST.md  README.md  SF2_PRODUCTION_READY.md  SOUND_ACCESS_GUIDE.md  TODO.md  TROUBLESHOOTING.md  commit_diff.txt  pod_lib_lint_result.txt  pubspec.yaml  setup_macos.sh  setup_sfizz_headers.sh.save  test_audiounit_ios.md  test_sfz.md  third_party
.github/workflows/: release.yaml
android/: .gitignore  CMakeLists.txt  build.gradle  build_sfizz.sh  gradle.properties  prepare_android.bat  prepare_android.sh  proguard-rules.pro
android/build_android_arm64-v8a/: CPackConfig.cmake  CPackSourceConfig.cmake  fs_std_impl.cpp
android/build_android_armeabi-v7a/: CPackConfig.cmake  CPackSourceConfig.cmake
android/build_android_x86_64/: CPackConfig.cmake  CPackSourceConfig.cmake
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: AudioEngine.cpp  Plugin.cpp  sfizz.hpp  sfizz_stub.cpp  tsf_implementation.cpp
android/src/main/cpp/AndroidEngine/: AndroidEngine.cpp  AndroidEngine.h  AndroidEngine_stub.cpp  AndroidEngine_stub.h
android/src/main/cpp/AndroidInstruments/: Mixer.h  SfizzSamplerInstrument.h  SoundFontInstrument.h
android/src/main/cpp/Scheduler/: SchedulerEvent.cpp  SchedulerEvent.h
android/src/main/cpp/Utils/: AssetManager.h  Logging.cpp  Logging.h  OptionArray.h
android/src/main/kotlin/com/michaeljperri/flutter_sequencer/: AudioEngine.kt  AudioService.kt  FlutterSequencerLifecycle.kt  FlutterSequencerPlugin.kt
cpp_test/: CMakeLists.txt  CMakeLists.txt.in
cpp_test/src/: buffer_tests.cpp  main.cpp
example/: README.md  flutter_run_log.txt  pubspec.yaml  sfizz.xcframework
example/android/: gradle.properties
example/android/app/: build.gradle  build.gradle.kts
example/android/gradle/wrapper/: gradle-wrapper.properties
example/assets/: README.md
example/ios/: Podfile  overrides.xcconfig
example/ios/.symlinks/plugins/: flutter_sequencer
example/ios/Flutter/: Debug.xcconfig  Profile.xcconfig  Release.xcconfig
example/ios/Runner/: AppDelegate.swift  GeneratedPluginRegistrant.m  Info.plist  Runner.entitlements
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: constants.dart  main.dart
example/lib/components/: debug_console.dart  position_view.dart  step_count_selector.dart  tempo_selector.dart  track_selector.dart  transport.dart
example/lib/components/drum_machine/: drum_machine.dart  volume_slider.dart
example/lib/models/: project_state.dart  step_sequencer_state.dart
example/licenses/: Fluid R3 SoundFont License.txt
example/macos/: Podfile
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner/Configs/: AppInfo.xcconfig  Debug.xcconfig  Release.xcconfig
example/macos/scripts/: setup_audio_libs.sh
example/test/: widget_test.dart
example_OLD/: pubspec.yaml
example_OLD/android/: build.gradle  settings.gradle
example_OLD/android/app/: build.gradle
example_OLD/android/gradle/wrapper/: gradle-wrapper.properties
example_OLD/ios/Runner.xcodeproj/: project.pbxproj
example_OLD/test/: widget_test.dart
ios/: flutter_sequencer.podspec  overrides.xcconfig  prepare.sh
ios/Classes/: AppleSamplerUtils.swift  CInteropWrappers.mm  CocoaEngine.swift  DartUtils.swift  FlutterSequencerPlatform.swift  FlutterSequencerPlugin.h  FlutterSequencerPlugin.m  FlutterSequencerUmbrella.h  SimpleAudioEngine.swift  SwiftCInterop.swift  SwiftFlutterSequencerPlugin.swift  flutter_sequencer-Plugin-Bridging-Header.h  flutter_sequencer.h  module.modulemap
ios/Classes/AudioUnit/: AudioUnitUtils.swift  BufferedAudioBus.hpp  DSPKernel.hpp  DSPKernel.mm
ios/Classes/AudioUnit/Sfizz/: SfizzAU.swift  SfizzDSPKernel.hpp  SfizzDSPKernelAdapter.h  SfizzDSPKernelAdapter.mm
ios/Classes/CallbackManager/: CallbackManager.cpp  CallbackManager.h
ios/Classes/CocoaScheduler/: CocoaScheduler.cpp  CocoaScheduler.h
ios/Classes/Engine/: AudioEngineCore.swift  AudioTrack.swift  AudioUnitUtils.swift  EventScheduler.swift  MIDIProcessor.swift  MIDISequencer.swift  MasterClock.swift  SequencerModels.swift
ios/Classes/IInstrument/: IInstrument.h  IRenderableAudio.h
ios/Classes/IInstrument/SharedInstruments/: SfizzSamplerInstrument.h
ios/Classes/Scheduler/: BaseScheduler.cpp  BaseScheduler.h  Buffer.h  SchedulerEvent.cpp  SchedulerEvent.h
lib/: constants.dart  flutter_sequencer.dart  global_state.dart  native_bridge.dart  native_bridge_interface.dart  sequence.dart  track.dart
lib/ffi/: functions.dart
lib/models/: events.dart  instrument.dart  instrument_error.dart  sfz.dart
lib/utils/: isolate.dart
macos/: README.md  flutter_sequencer.podspec  overrides.xcconfig  prepare.sh
macos/Classes/: CocoaEngine.swift  CommonTypes.h  DartUtils.swift  FlutterSequencer-Bridging-Header.h  FlutterSequencerPlugin.swift  SwiftFlutterSequencerPlugin.swift  flutter_sequencer.h  flutter_sequencer.modulemap  module.modulemap
macos/Classes/AudioUnit/: AudioUnitUtils.swift
macos/Classes/AudioUnit/Sfizz/: SfizzAU.h  SfizzAU.mm  module.modulemap
macos/Classes/CocoaScheduler/: CocoaScheduler.cpp  CocoaScheduler.h
macos/Classes/IInstrument/SharedInstruments/: SfizzSamplerInstrument.h
macos/Classes/Scheduler/: BaseScheduler.cpp  BaseScheduler.h
memory-bank/: activeContext.md  android-build-fixes.md  android-library-loading.md  build-fixes.md  ios-build-fixes.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: fix_cocoapods_config.rb  fix_header_paths.rb  install_audio_deps.sh  setup_xcode_project.rb  verify_headers.sh
test/: flutter_sequencer_test.dart  test_helpers.dart
test/integration/: sequencer_integration_test.dart
test/mocks/: mock_native_bridge.dart
test/unit/: sequence_test.dart  track_test.dart
test_dist/android/: local.properties
(+9 files in other folders)
